Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.4.0
-
None
-
Linux
-
a60571b3700e80f44705ebc4bab9628cf852891c
Description
Since Qt 5.4.0, creating a new .ini file with the help of QSettings causes the file to have very limited rights (file permissions 600 on Unix). This is a regression from Qt 5.3 and earlier, where the same file was created with normal rights (644 typically).
Test case
QSettings s("settings.ini", QSettings::IniFormat); s.setValue("some", "value"); s.sync(); QFileInfo file(s.fileName()); qDebug() << "Can everyone read file?" << file.permissions().testFlag(QFile::ReadOther);
Attachments
Issue Links
- relates to
-
QTBUG-21739 QSettings IniFormat writes are not atomic
-
- Closed
-