Set correct permissions for ini files

This is necessary due to a behavior change in QSettings/Qt 5
that now creates ini files with more restrictive permissions
than before.

Task-number: QTIFW-589
Task-number: QTBUG-44086
Change-Id: I296ad4b312a933cbda7dd5c1f644294f83e1850d
Reviewed-by: Kai Koehne <kai.koehne@theqtcompany.com>